--- a/proyectoSockets/public/index.html
+++ b/proyectoSockets/public/index.html
@@ -10,5 +10,10 @@
 <body>
     <h1>Mi Aplicaicon</h1>
     <div id="messages"></div>
+    <form onsubmit="return addMessage(this)">
+        <input type="text" id="username" placeholder="Tu nombre">
+        <input type="text" id="texto" placeholder="Cuentanos algo">
+        <input type="submit" value="Enviar">
+    </form>
 </body>
 </html>
